--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,19 +24,31 @@
     socket.binaryType = "arraybuffer";
 
     createGame.onclick = function (event) {
-        console.log('coucou')
+        var jqxhr = $.post( "http://localhost:8080/createGame/"+sessionId, function() {
+            alert( "success" );
+        })
+        .fail(function() {
+            alert( "error creating game" );
+        })
     };
 
     socket.onopen = function (event) {
     };
 
     socket.onmessage = function (event) {
-        var gameData = JSON.parse(event.data);
-        sessionId = gameData['sessionId'];
-        var currentGames = gameData['currentGames'];
-        currentGames.forEach(function(game) {
-            addToCurrentGames(game);
-        });
+        var data = JSON.parse(event.data);
+        var opCode = sessionId = data['opCode'];
+
+        if(opCode == 'mainPage'){
+            sessionId = data['sessionId'];
+            var currentGames = data['currentGames'];
+            currentGames.forEach(function(game) {
+                addToCurrentGames(game);
+            });
+        }else if(opCode == 'gameCreated'){
+            var newGame = data['newGame'];
+            addToCurrentGames(newGame);
+        }
     };
 
     function addToCurrentGames(game) {
@@ -49,9 +61,10 @@
     }
 
 </script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"-->
+<!--        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"-->
+<!--        crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
