--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,19 @@
     </div>
     <br/>
 
-    <ul id="currentGames" class="list-group"></ul>
+<!--    <ul id="currentGames" class="list-group"></ul>-->
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">game name</th>
+            <th scope="col">creator</th>
+            <th scope="col">number of players</th>
+            <th scope="col"></th>
+        </tr>
+        </thead>
+        <tbody id="currentGames" >
+        </tbody>
+    </table>
 </div>
 </body>
 <script>
@@ -24,9 +36,7 @@
     socket.binaryType = "arraybuffer";
 
     createGame.onclick = function (event) {
-        var jqxhr = $.post( "http://localhost:8080/createGame/"+sessionId, function() {
-            alert( "success" );
-        })
+        var jqxhr = $.post( "http://localhost:8080/createGame/"+sessionId, function() {})
         .fail(function() {
             alert( "error creating game" );
         })
@@ -37,7 +47,7 @@
 
     socket.onmessage = function (event) {
         var data = JSON.parse(event.data);
-        var opCode = sessionId = data['opCode'];
+        var opCode = data['opCode'];
 
         if(opCode == 'mainPage'){
             sessionId = data['sessionId'];
@@ -52,7 +62,8 @@
     };
 
     function addToCurrentGames(game) {
-        currentGames.innerHTML += `<li class="list-group-item">${game.title} ${game.isJoinable ? '<button style="float: right" type="button" class="btn btn-primary btn-sm">join</button>' : ''}</li>`
+        // currentGames.innerHTML += `<li class="list-group-item">${game.title} ${game.isJoinable ? '<button style="float: right" type="button" class="btn btn-primary btn-sm">join</button>' : ''}</li>`
+        currentGames.innerHTML += `<tr> <td>${game.title}</th> <td>${game.creator}</td> <td>${game.nbOfPlayers}</td> <td>${game.isJoinable ? '<button style="float: right" type="button" class="btn btn-primary btn-sm">join</button>' : ''}</td> </tr>`
     }
 
     function addImageToWindow(image) {
@@ -61,9 +72,6 @@
     }
 
 </script>
-<!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"-->
-<!--        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"-->
-<!--        crossorigin="anonymous"></script>-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
