--- a/src/main/resources/static/gamePage/gamePage.html
+++ b/src/main/resources/static/gamePage/gamePage.html
@@ -7,7 +7,10 @@
 <h1>game title <span id="gameTitle"></span></h1>
 <h2>game state <span id="gameState"></span></h2>
 Players
-<ul id="players"></ul>
+<ul id="players">
+    <li id="player1"></li>
+    <li id="player2"></li>
+</ul>
 
 <div class="game-board">
     <div class="box"></div>
