--- a/src/main/resources/static/gamePage/gamePage.html
+++ b/src/main/resources/static/gamePage/gamePage.html
@@ -1,16 +1,20 @@
 <html>
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="gamePage.css"/>
     <title>Let's play tic tac toe</title>
 </head>
 <body>
-<h1>game title <span id="gameTitle"></span></h1>
-<h2>game state <span id="gameState"></span></h2>
+<h2>game title <span id="gameTitle"></span></h2>
+<h3>game state <span id="gameState"></span></h3>
 Players
 <ul id="players">
     <li id="player1"></li>
     <li id="player2"></li>
 </ul>
+
+<div id="startGame"></div>
 
 <div class="game-board">
     <div class="box"></div>
@@ -25,5 +29,12 @@ Players
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+<script type="application/javascript" src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script src="gamePage.js"></script>
 </html>
