--- a/src/main/resources/static/gamePage/gamePage.html
+++ b/src/main/resources/static/gamePage/gamePage.html
@@ -15,6 +15,10 @@ Players
 </ul>
 
 <div id="startGame"></div>
+<div id="ongoingGameState" style="display: none">
+    <div>You are: <span id="playerAssignment"></span></div>
+    <div>current player: <span id="currentPlayer"></span></div>
+</div>
 
 <div class="game-board">
     <div class="box"></div>
