--- a/src/main/resources/static/gamePage/gamePage.html
+++ b/src/main/resources/static/gamePage/gamePage.html
@@ -21,15 +21,15 @@ Players
 </div>
 
 <div class="game-board">
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div data-x="0" data-y="0" class="box" onclick="play(0,0)"></div>
+    <div data-x="0" data-y="1" class="box" onclick="play(0,1)"></div>
+    <div data-x="0" data-y="2" class="box" onclick="play(0,2)"></div>
+    <div data-x="1" data-y="0" class="box" onclick="play(1,0)"></div>
+    <div data-x="1" data-y="1" class="box" onclick="play(1,1)"></div>
+    <div data-x="1" data-y="2" class="box" onclick="play(1,2)"></div>
+    <div data-x="2" data-y="0" class="box" onclick="play(2,0)"></div>
+    <div data-x="2" data-y="1" class="box" onclick="play(2,1)"></div>
+    <div data-x="2" data-y="2" class="box" onclick="play(2,2)"></div>
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
