--- a/src/main/resources/static/gamePage/gamePage.html
+++ b/src/main/resources/static/gamePage/gamePage.html
@@ -19,6 +19,25 @@ Players
     <div>You are: <span id="playerAssignment"></span></div>
     <div>current player: <span id="currentPlayer"></span></div>
 </div>
+<div id="resultPopup" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Game Over</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p id="result">Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button onclick="ackEndGameThenGamesList()" type="button" class="btn btn-primary btn-lg btn-block">Back to games list</button>
+                <button onclick="ackEndGameThenMainMenu()" type="button" class="btn btn-secondary btn-lg btn-block">Back to main menu</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="game-board">
     <div data-x="0" data-y="0" class="box" onclick="play(0,0)"></div>
